--- a/src/DashAgil.Web/src/app/dashboard/main/main.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/main/main.component.html
@@ -71,19 +71,16 @@
           </div>
           <div class="body">
             <div class="card">
-              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options"></div>
+              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options1"></div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="row clearfix">
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12">
         <div class="card">
-          <div class="header">
-            <h2>
-              <strong>Earning</strong> Source</h2>
+          <div class="header text-center">
+            <h2>Sprint 5</h2>
             <button mat-button [matMenuTriggerFor]="menu" class="header-dropdown">
               <mat-icon>more_vert</mat-icon>
             </button>
@@ -94,63 +91,103 @@
             </mat-menu>
           </div>
           <div class="body">
-            <div class="tab-pane body" id="skills">
-              <ul class="list-unstyled">
-                <li>
-                  <div class="mb-2">
-                    <span class="progress-label">envato.com</span>
-                    <span class="pull-right progress-percent label label-info m-b-5">17%</span>
-                  </div>
-                  <div class="progress skill-progress m-b-20 w-100">
-                    <div class="progress-bar l-bg-green width-per-45" role="progressbar" aria-valuenow="45"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="mb-2">
-                    <span class="progress-label">google.com</span>
-                    <span class="pull-right progress-percent label label-danger m-b-5">27%</span>
-                  </div>
-                  <div class="progress skill-progress m-b-20 w-100">
-                    <div class="progress-bar l-bg-purple width-per-27" role="progressbar" aria-valuenow="27"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="mb-2">
-                    <span class="progress-label">yahoo.com</span>
-                    <span class="pull-right progress-percent label label-primary m-b-5">25%</span>
-                  </div>
-                  <div class="progress skill-progress m-b-20 w-100">
-                    <div class="progress-bar l-bg-orange width-per-25" role="progressbar" aria-valuenow="25"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="mb-2">
-                    <span class="progress-label">store</span>
-                    <span class="pull-right progress-percent label label-success m-b-5">18%</span>
-                  </div>
-                  <div class="progress skill-progress m-b-20 w-100">
-                    <div class="progress-bar l-bg-cyan width-per-18" role="progressbar" aria-valuenow="18"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </li>
-                <li>
-                  <div class="mb-2">
-                    <span class="progress-label">Others</span>
-                    <span class="pull-right progress-percent label label-warning m-b-5">13%</span>
-                  </div>
-                  <div class="progress skill-progress m-b-20 w-100">
-                    <div class="progress-bar l-bg-red width-per-13" role="progressbar" aria-valuenow="13"
-                      aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </li>
-              </ul>
+            <div class="card">
+              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options2"></div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header text-center">
+            <h2>Radar Agil</h2>
+            <button mat-button [matMenuTriggerFor]="menu" class="header-dropdown">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Action</button>
+              <button mat-menu-item>Another action</button>
+              <button mat-menu-item>Something else here</button>
+            </mat-menu>
+          </div>
+          <div class="body">
+            <div class="card div-radar">
+              <div id="cross">
+                <div id="cross-vertical">
+                </div>
+                <div id="cross-horizontal">
+                </div>
+              </div>
+              <div class="radar" echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options3"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header text-center">
+            <h2>Velocidade</h2>
+            <button mat-button [matMenuTriggerFor]="menu" class="header-dropdown">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Action</button>
+              <button mat-menu-item>Another action</button>
+              <button mat-menu-item>Something else here</button>
+            </mat-menu>
+          </div>
+          <div class="body">
+            <div class="card">
+              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options4"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header text-center">
+            <h2>SQUAD</h2>
+            <button mat-button [matMenuTriggerFor]="menu" class="header-dropdown">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Action</button>
+              <button mat-menu-item>Another action</button>
+              <button mat-menu-item>Something else here</button>
+            </mat-menu>
+          </div>
+          <div class="body">
+            <div class="card">
+              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12">
+        <div class="card">
+          <div class="header text-center">
+            <h2>DIAGRAMA DE FLUXO CUMULATIVO</h2>
+            <button mat-button [matMenuTriggerFor]="menu" class="header-dropdown">
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Action</button>
+              <button mat-menu-item>Another action</button>
+              <button mat-menu-item>Something else here</button>
+            </mat-menu>
+          </div>
+          <div class="body">
+            <div class="card">
+              <div echarts (chartClick)="onChartEvent($event, 'chartClick')" [options]="options6"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
