--- a/src/DashAgil.Web/src/styles.scss
+++ b/src/DashAgil.Web/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.card .header {
+    padding: 15px 15px 5px 10px;
+}
