--- a/src/DashAgil.Web/src/styles.scss
+++ b/src/DashAgil.Web/src/styles.scss
@@ -1,4 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
-.card .header {
-    padding: 15px 15px 5px 10px;
+.dark .card {
+  box-shadow: none;
+
+  .header {
+    padding: 15px 15px 5px 15px;
+    color: #f1f1f1;
+  }
+
+  .body {
+    color: #f1f1f1;
+  }
 }
