Implementa tela de lead time

--- a/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
@@ -27,7 +27,7 @@
             <h2>SQUAD <strong>Terror By Night</strong></h2>
           </div>
           <div class="body">
-            <div id="squad" echarts [options]="optionsSquad"></div>
+            <div class="graphic" echarts [options]="optionsSquad"></div>
           </div>
         </div>
       </div>
@@ -38,7 +38,7 @@
             <h2>Sprint 5</h2>
           </div>
           <div class="body">
-            <div id="sprint" echarts [options]="optionsSprint"></div>
+            <div class="graphic" echarts [options]="optionsSprint"></div>
           </div>
         </div>
       </div>
