--- a/src/DashAgil.Web/src/app/dashboard/overview/overview.component.scss
+++ b/src/DashAgil.Web/src/app/dashboard/overview/overview.component.scss
@@ -1,58 +1,56 @@
 .counter-box {
-    min-height: 80px;
-    margin: 0px 0px 10px 0px;
-    padding: 8px 0 5px 0;
-    color: #cfd7e4;
+  min-height: 80px;
+  margin: 0px 0px 10px 0px;
+  padding: 8px 0 5px 0;
+  color: #cfd7e4;
 }
 
 .chart-squad {
-    height: 320px;
+  height: 320px;
 }
 
 .chart-execution {
-    height: 50px;
+  height: 50px;
 }
 
-.radar {
-    height: 500px;
+.radar-container {
+  align-items: center;
+
+  .radar {
+    width: 400px;
+  }
+}
+
+@media (max-width: 500px) {
+  .radar {
+    max-width: 270px;
+  }
+}
+
+@media (max-width: 300px) {
+  .radar {
+    max-width: 200px;
+  }
 }
 
 .sl-primary {
-    ::before {
-        background-color: #186db1;
-    }
+  ::before {
+    background-color: #186db1;
+  }
 
-    :last-child::after {
-        background-color: #186db1;
-    }
+  :last-child::after {
+    background-color: #186db1;
+  }
 }
 
-#cross {
-    div {
-        position: absolute;
-        background: black;
-        z-index: 10;
-    }
-
-    #cross-vertical {   
-        left: 49.8%;
-        height: 90%;
-        width: 4px;
-        top: 5%;
-    }
-    
-    #cross-horizontal {   
-        top: 49.8%;
-        left: 24%;
-        width: 52%;
-        height: 3px;
-    }
+.evolution {
+  height: 78%;
 }
 
 ::ng-deep .mat-form-field-flex {
-    padding: .2em .75em 0.60em .75em !important;
+  padding: 0.2em 0.75em 0.6em 0.75em !important;
 
-    .mat-select-arrow-wrapper {
-        padding-top: 10px;
-    }
+  .mat-select-arrow-wrapper {
+    padding-top: 10px;
+  }
 }
