--- a/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
@@ -94,14 +94,14 @@
         </div>
       </div>
       <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
-        <div class="card">
+        <div class="card risks">
           <div class="header">
             <h2>Riscos</h2>
           </div>
           <div class="body">
             <div class="media-list position-relative">
               <div class="table-responsive">
-                <table id="risks" class="table table-hover table-xl mb-0">
+                <table class="table table-hover table-xl mb-0">
                   <tbody>
                     <tr>
                       <td>
