--- a/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
@@ -15,6 +15,15 @@
               <a href="#" onClick="return false;">Squad</a>
             </li>
             <li class="breadcrumb-item active">{{squadName}}</li>
+            <!-- <li>
+              <mat-form-field appearance="fill" class="w-100">
+                <mat-select [formControl]="squad">
+                  <mat-option *ngFor="let squad of squads" [value]="squad">
+                    {{squad}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -50,7 +59,7 @@
           <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
             <div class="card">
               <div class="body text-center percent-homolog">
-                <h1>56%</h1>
+                <h1>{{percentFeatures}}%</h1>
                 <span>Em homologação – Features da Squad</span>
               </div>
             </div>
