--- a/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.scss
+++ b/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.scss
@@ -2,7 +2,8 @@
   align-items: center;
 
   .radar {
-    width: 400px;
+    width: 100%;
+    height: 600px;
   }
 }
 
@@ -16,4 +17,12 @@
   .radar {
     max-width: 200px;
   }
+}
+
+.title {
+  padding: 20px 0 0 20px;
+}
+
+mat-tab-group {
+  padding: 0 10px 10px;
 }
