--- a/src/DashAgil.Web/src/app/dashboard/overview/overview.component.scss
+++ b/src/DashAgil.Web/src/app/dashboard/overview/overview.component.scss
@@ -6,7 +6,7 @@
 }
 
 .chart-squad {
-  height: 320px;
+  height: 345px;
 }
 
 .chart-execution {
@@ -24,7 +24,28 @@
 }
 
 .evolution {
-  height: 78%;
+  height: 315px;
+  margin-bottom: 40px;
+
+  .body {
+    height: 100%;
+
+    .table-responsive {
+      height: 85%;
+    }
+  }
+}
+
+table {
+  tr td:first-child {
+    width: 1%;
+    white-space: nowrap;
+  }
+
+  thead th {
+    position: sticky;
+    top: 0;
+  }
 }
 
 ::ng-deep .mat-form-field {
