Implementadas telas de Stories

--- a/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
@@ -90,8 +90,7 @@
                 <h2>Demandas em execução</h2>
               </div>
               <div class="body">
-                <div class="chart-execution" echarts (chartClick)="onChartEvent($event, 'chartClick')"
-                  [options]="optionsInExecution"></div>
+                <div class="chart-execution" echarts [options]="optionsInExecution"></div>
               </div>
             </div>
 
