--- a/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
@@ -41,12 +41,11 @@
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Radar Ágil</h2>
+              <h2></h2>
             </div>
             <div class="body">
               <div class="card radar-container">
-                <div echarts #radar class="radar" (chartClick)="onChartEvent($event, 'chartClick')"
-                  [options]="optionsRadar"></div>
+                <div echarts #radar class="radar" [options]="optionsRadar"></div>
               </div>
             </div>
           </div>
