--- a/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
+++ b/src/DashAgil.Web/src/app/authentication/signin/signin.component.scss
@@ -8,3 +8,9 @@
     // background-color: #000000;
     // opacity: 0.9;
 }
+
+input:-internal-autofill-selected {
+  background-color: black !important;
+  background-image:none !important;
+  color: #000000 !important;
+}
