--- a/src/DashAgil.Web/src/app/dashboard/first-sync/first-sync.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/first-sync/first-sync.component.html
@@ -7,31 +7,31 @@
             <h2>Sincronização</h2>
           </div>
           <div class="body">
-            <form  (ngSubmit)="sendSync()">
+            <form (ngSubmit)="sendSync()">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="row">
                   <div class="col-md-4">
-                    <mat-form-field appearance="fill" class="w-100 client">
-                  <mat-select [formControl]="client">
-                    <mat-option *ngFor="let client of clients" [value]="client.id">
-                      {{client.nome}}
-                    </mat-option>
-                  </mat-select>
-                  <span matPrefix>
-                    <mat-icon class="m-r-10">account_circle</mat-icon>
-                  </span>
-                    </mat-form-field>
-                  </div>
-                  <div class="col-md-4">
-                    <mat-form-field appearance="fill" class="w-100">
+                    <mat-form-field appearance="fill" class="dropdown-icon">
                       <mat-select [formControl]="provider">
                         <mat-option *ngFor="let provider of providers" [value]="provider.id">
                           {{provider.descricao}}
                         </mat-option>
                       </mat-select>
-                    <span matPrefix>
-                      <mat-icon class="m-r-10" [svgIcon]="getIcon(provider.value)"></mat-icon>
-                    </span>
+                      <span matPrefix>
+                        <mat-icon class="m-r-10" [svgIcon]="getIcon(provider.value)"></mat-icon>
+                      </span>
+                    </mat-form-field>
+                  </div>
+                  <div class="col-md-4">
+                    <mat-form-field appearance="fill" class="dropdown-icon client">
+                      <mat-select [formControl]="client">
+                        <mat-option *ngFor="let client of clients" [value]="client.id">
+                          {{client.nome}}
+                        </mat-option>
+                      </mat-select>
+                      <span matPrefix>
+                        <mat-icon class="m-r-10">account_circle</mat-icon>
+                      </span>
                     </mat-form-field>
                   </div>
                   <div class="col-md-4">
@@ -49,8 +49,8 @@
               </div>
             </form>
           </div>
-          </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
