--- a/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
@@ -19,7 +19,7 @@
 
     <div class="row">
       <div class="widgets col-xl-2 col-lg-2 col-md-12 col-sm-12">
-        <mat-form-field appearance="fill" class="w-100">
+        <mat-form-field appearance="fill" class="dropdown-icon">
           <mat-select [formControl]="provider">
             <mat-option *ngFor="let provider of providers" [value]="provider.id">
               {{provider.descricao}}
@@ -30,7 +30,7 @@
           </span>
         </mat-form-field>
 
-        <mat-form-field appearance="fill" class="w-100 client">
+        <mat-form-field appearance="fill" class="dropdown-icon client">
           <mat-select [formControl]="client">
             <mat-option *ngFor="let client of clients" [value]="client.id">
               {{client.nome}}
