--- a/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/squad/squad.component.html
@@ -21,15 +21,25 @@
     </div>
 
     <div class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+      <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
         <mat-form-field appearance="fill">
           <mat-label>Squad</mat-label>
-          <mat-select [formControl]="squad">
+          <mat-select [formControl]="controlSquad">
             <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
-              <mat-option *ngFor="let squad of client.squads" [value]="squad.id" with="200px">
+              <mat-option *ngFor="let squad of client.squads | sortBy:'asc':'nome'" [value]="squad.id" with="200px">
                 {{squad.nome}}
               </mat-option>
             </mat-optgroup>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+        <mat-form-field appearance="fill">
+          <mat-label>Sprint</mat-label>
+          <mat-select [formControl]="controlSprint">
+            <mat-option *ngFor="let sprint of sprints" [value]="sprint.id" with="200px">
+              {{sprint.nome}}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
@@ -50,7 +60,7 @@
       <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <div class="card">
           <div class="header">
-            <h2>Sprint Burndown</h2>
+            <h2>Burndown - {{ currentSprint?.nome }}</h2>
           </div>
           <div class="body">
             <div class="graphic" echarts [options]="optionsSprint"></div>
