--- a/src/DashAgil.Web/src/app/dashboard/lead-time/lead-time.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/lead-time/lead-time.component.html
@@ -19,6 +19,21 @@
     </div>
 
     <div class="row">
+      <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+        <mat-form-field appearance="fill">
+          <mat-label>Squad</mat-label>
+          <mat-select [formControl]="controlSquad">
+            <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
+              <mat-option *ngFor="let squad of client.squads | sortBy:'asc':'nome'" [value]="squad.id" with="200px">
+                {{squad.nome}}
+              </mat-option>
+            </mat-optgroup>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <div class="card">
           <div class="header text-center">
