--- a/src/DashAgil.Web/src/app/dashboard/stories-squad/stories-squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/stories-squad/stories-squad.component.html
@@ -18,7 +18,7 @@
       <div class="row">
         <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
           <mat-form-field appearance="fill">
-            <mat-label>Squad</mat-label>
+            <mat-label>Cliente</mat-label>
             <mat-select [formControl]="controlClient">
               <mat-option *ngFor="let client of clients | sortBy:'asc':'nome'" [value]="client.id" with="200px">
                 {{client.nome}}
