Alterado redirecionamento de squad por Id

--- a/src/DashAgil.Web/src/app/dashboard/stories/stories.component.scss
+++ b/src/DashAgil.Web/src/app/dashboard/stories/stories.component.scss
@@ -7,3 +7,27 @@
 .mat-column-description {
   flex: 0 0 50%;
 }
+
+.col-concluido {
+  color: rgb(0, 176, 80) !important;
+}
+
+.col-desenvolvimento {
+  color: rgb(255, 192, 0) !important;
+}
+
+.col-desenvolvimento-concluido {
+  color: rgb(169, 209, 142) !important;
+}
+
+.col-homologacao {
+  color: rgb(169, 209, 142) !important;
+}
+
+.col-homologado {
+  color:rgb(0, 190, 240) !important;
+}
+
+.col-remanescente {
+  color: rgb(166, 166, 166) !important;
+}
