--- a/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/stories/stories.component.html
@@ -34,24 +34,6 @@
           <div class="card">
             <div class="body">
               <div class="responsive_table">
-                <!-- <div class="materialTableHeader">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul class="header-buttons-left ml-0">
-                        <li class="dropdown">
-                          <h2>
-                            <strong>Histórias</strong>
-                          </h2>
-                        </li>
-                        <li class="dropdown m-l-20">
-                          <label for="search-input"><i class="material-icons search-icon">search</i></label>
-                          <input placeholder="Search" type="text" #filter class="browser-default search-field"
-                            aria-label="Search box">
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div> -->
                 <mat-table [dataSource]="dataSource" matSort>
                   <ng-container matColumnDef="id">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
@@ -78,7 +60,7 @@
                       Status
                     </mat-header-cell>
                     <mat-cell *matCellDef="let row">
-                      {{row.status}}
+                      <span class="badge" [ngClass]="defineStatusColor(row.status)"> {{row.status}} </span>
                     </mat-cell>
                   </ng-container>
                   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
