Adicionado botão de envio de email

--- a/src/DashAgil.Web/src/app/dashboard/email/email.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/email/email.component.html
@@ -10,6 +10,7 @@
                   <div class="row" class="w-100">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                       <div class="chart" echarts [options]="optionsEmail"></div>
+                      <button class="btn btn-primary" (click)="sendEmail()">Enviar e-mail</button>
                     </div>
                   </div>
                 </mat-tab>
