Responsividade dos gráficos

--- a/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/overview/overview.component.html
@@ -8,7 +8,7 @@
               <h4 class="page-title">Visão Geral</h4>
             </li>
             <li class="breadcrumb-item bcrumb-1">
-              <a routerLink="/dashboard/main">
+              <a routerLink="/dashboard">
                 <i class="fas fa-home"></i> Dashboard</a>
             </li>
             <li class="breadcrumb-item active">Visão Geral </li>
@@ -74,7 +74,7 @@
       <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12">
         <div class="row">
           <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-            <div class="card">
+            <div class="card demands">
               <div class="header">
                 <h2>Demandas X Squad</h2>
               </div>
