--- a/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/radar-agil/radar-agil.component.html
@@ -8,7 +8,7 @@
               <h4 class="page-title">Radar Ágil</h4>
             </li>
             <li class="breadcrumb-item bcrumb-1">
-              <a routerLink="/dashboard/main">
+              <a routerLink="/dashboard">
                 <i class="fas fa-home"></i> Dashboard</a>
             </li>
             <li class="breadcrumb-item active">Radar Ágil</li>
@@ -21,7 +21,7 @@
             <mat-label>Squad</mat-label>
             <mat-select [formControl]="controlSquad">
               <mat-optgroup *ngFor="let client of clients" [label]="client.nome">
-                <mat-option *ngFor="let squad of client.squads | sortBy:'asc':'nome'" [value]="squad.id" with="200px">
+                <mat-option *ngFor="let squad of client.squads" [value]="squad.id" with="200px">
                   {{squad.nome}}
                 </mat-option>
               </mat-optgroup>
@@ -32,7 +32,6 @@
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
           <div class="card">
-            <!-- <span class="h4 title">Indicadores</span> -->
             <div class="body">
               <mat-tab-group>
                 <mat-tab label="Processo">
