--- a/src/DashAgil.Web/src/app/dashboard/stories-squad/stories-squad.component.html
+++ b/src/DashAgil.Web/src/app/dashboard/stories-squad/stories-squad.component.html
@@ -8,7 +8,7 @@
               <h4 class="page-title">Histórias</h4>
             </li>
             <li class="breadcrumb-item bcrumb-1">
-              <a routerLink="/dashboard/main">
+              <a routerLink="/dashboard">
                 <i class="fas fa-home"></i> Dashboard</a>
             </li>
             <li class="breadcrumb-item active">Histórias</li>
@@ -20,7 +20,7 @@
           <mat-form-field appearance="fill">
             <mat-label>Cliente</mat-label>
             <mat-select [formControl]="controlClient">
-              <mat-option *ngFor="let client of clients | sortBy:'asc':'nome'" [value]="client.id" with="200px">
+              <mat-option *ngFor="let client of clients" [value]="client.id" with="200px">
                 {{client.nome}}
               </mat-option>
             </mat-select>
